Formatted datetime and <ngb-alert> tags

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,7 @@
-  {{today | date : "dd/MMM/yyyy hh:mm a"}}
+<ngb-alert>
+    Random message
+</ngb-alert>
+{{today | date : "dd/MMM/yyyy hh:mm a"}}
 <h1 style="color:white" myHighlight>
   {{title}}
 </h1>
